Fix Middle Name and Read Time oute Error

--- a/force-app/main/default/classes/ParticipantEnrollmentService.cls
+++ b/force-app/main/default/classes/ParticipantEnrollmentService.cls
@@ -260,6 +260,7 @@ public without sharing class ParticipantEnrollmentService {
             'Participant__c',
             'Participant__r.First_Name__c',
             'Participant__r.Last_Name__c',
+            'Participant__r.Middle_Name__c',
             'Participant__r.Full_Name__c',
             'Participant__r.Date_of_Birth__c',
             'Participant__r.Birth_Year__c',
