--- a/force-app/main/tests/classes/Test_BaseCRCPCommunity.cls
+++ b/force-app/main/tests/classes/Test_BaseCRCPCommunity.cls
@@ -5,98 +5,67 @@
 @IsTest(IsParallel=false)
 private class Test_BaseCRCPCommunity {
 
-    static Account piAccount;
-    static Account hcpAccount;
-    static Account studySiteAccount;
-    static Account participantsAccount;
-    static Account delegateAccount;
-
-    static Contact piContact;
-    static Contact hcpContact;
-    static Contact piDelegateContact;
-    static Contact hcpDelegateContact;
-
-
-    static User piUser;
-    static User hcpUser;
-
-    static Clinical_Trial_Profile__c study;
-    static String languageLocale;
-    static Translation__c studyTranslation;
-    static Study_Site__c studySite;
-    static HCP_Enrollment__c hcpEnrollment;
-    static Site_Staff__c siteStaff;
-    static Referring_HCP_Staff__c referringHcpStaff;
-
-    static Terms_And_Conditions__c portalTC;
-    static Terms_And_Conditions__c studyTC;
-
-    static Participant_Enrollment__c mrrPE;
-    static Participant_Enrollment__c passedMrrPE;
-    static User participantUser;
-    static Therapeutic_Area__c area;
-
-    static Participant__c participant;
-    static Referral_Network__c referralNetwork;
-    static Contact_Referral_Network__c contactReferralNetwork;
-    static Contact_Therapeutic_Area__c contactTherapeuticArea;
-
-
+    @TestSetup
     static void init() {
 
-        portalTC = new Terms_And_Conditions__c(
+        List<Terms_And_Conditions__c> termsAndConditions = new List<Terms_And_Conditions__c>();
+        Terms_And_Conditions__c portalTC = new Terms_And_Conditions__c(
                 Active__c = true
         );
-        insert portalTC;
+        termsAndConditions.add(portalTC);
 
-        studyTC = new Terms_And_Conditions__c();
-        insert studyTC;
+        Terms_And_Conditions__c studyTC = new Terms_And_Conditions__c();
+        termsAndConditions.add(studyTC);
+        insert termsAndConditions;
 
-        participantsAccount = new Account(
+        List<Account> accounts = new List<Account>();
+        Account participantsAccount = new Account(
                 Name = 'Participant'
         );
-        insert participantsAccount;
+        accounts.add(participantsAccount);
 
-        piAccount = new Account(
+        Account piAccount = new Account(
                 Name = 'PI Account'
         );
-        insert piAccount;
+        accounts.add(piAccount);
 
-        hcpAccount = new Account(
+        Account hcpAccount = new Account(
                 Name = 'HCP Account'
         );
-        insert hcpAccount;
+        accounts.add(hcpAccount);
 
-        delegateAccount = new Account(
+        Account delegateAccount = new Account(
                 Name = CommunityService.COMMUNITY_DELEGATE_ACCOUNT_NAME
         );
-        insert delegateAccount;
+        accounts.add(delegateAccount);
 
-        studySiteAccount = new Account(
+        Account studySiteAccount = new Account(
                 Name = 'Study Site Account',
                 BillingLatitude = 41.766594,
                 BillingLongitude = -74.991509
         );
-        insert studySiteAccount;
+        accounts.add(studySiteAccount);
+        insert accounts;
 
-        piContact = new Contact(
+        List<Contact> contacts = new List<Contact>();
+        Contact piContact = new Contact(
                 FirstName = 'PI',
                 LastName = 'PI',
                 Email = 'pi@emil.com',
                 AccountId = piAccount.Id
         );
-        insert piContact;
+        contacts.add(piContact);
 
-        piDelegateContact = new Contact(
+        Contact piDelegateContact = new Contact(
                 FirstName = 'PI_Delegate',
                 LastName = 'PI_Delegate',
                 Email = 'pi_delegate@emil.com',
                 AccountId = piAccount.Id,
                 userCommunityMode__c = 'PI'
         );
-        insert piDelegateContact;
+        contacts.add(piDelegateContact);
 
-        hcpContact = new Contact(
+        Contact hcpContact = new Contact(
                 FirstName = 'PI',
                 LastName = 'PI',
                 Email = 'hcp@emil.com',
@@ -104,22 +73,24 @@ private class Test_BaseCRCPCommunity {
                 MailingLatitude = 40.766594,
                 MailingLongitude = -73.991509
         );
-        insert hcpContact;
+        contacts.add(hcpContact);
 
-        hcpDelegateContact = new Contact(
+        Contact  hcpDelegateContact = new Contact(
                 FirstName = 'HCP_Delegate',
                 LastName = 'HCP_Delegate',
                 Email = 'hcp_delegate@emil.com',
                 AccountId = hcpAccount.Id
         );
-        insert hcpDelegateContact;
-        area = new Therapeutic_Area__c(Name = 'Test TA');
+        contacts.add(hcpDelegateContact);
+        insert contacts;
+
+        Therapeutic_Area__c area = new Therapeutic_Area__c(Name = 'Test TA');
         insert area;
-        
+
         Visit_Plan__c vp = new Visit_Plan__c();
         insert vp;
-        
-        study = new Clinical_Trial_Profile__c(
+
+        Clinical_Trial_Profile__c study = new Clinical_Trial_Profile__c(
                 Protocol_ID__c = 'tt123456789',
                 Override_Recruitment_Status__c = 'Actively Enrolling',
                 NCT_Number__c = 'NCT00000001',
@@ -135,6 +106,7 @@ private class Test_BaseCRCPCommunity {
         );
         insert study;
 
+        String languageLocale;
         Schema.DescribeFieldResult fieldResult = Translation__c.Language__c.getDescribe();
         List<Schema.PicklistEntry> ple = fieldResult.getPicklistValues();
         for( Schema.PicklistEntry pickListVal : ple){
@@ -144,9 +116,7 @@ private class Test_BaseCRCPCommunity {
             }
         }
 
-
-
-        studyTranslation = new Translation__c(
+        Translation__c  studyTranslation = new Translation__c(
                 Language__c = languageLocale,
                 Record_Id__c = study.Id,
                 Field_Name__c = 'Study_Title__c',
@@ -154,7 +124,7 @@ private class Test_BaseCRCPCommunity {
         );
         insert studyTranslation;
 
-        studySite = new Study_Site__c(
+        Study_Site__c  studySite = new Study_Site__c(
                 Principal_Investigator__c = piContact.Id,
                 Clinical_Trial_Profile__c = study.Id,
                 Override_PI_Referral_Status__c = StudySiteService.PI_S_INVITATION_SENT,
@@ -166,7 +136,7 @@ private class Test_BaseCRCPCommunity {
         studySite.Override_PI_Referral_Status__c = StudySiteService.PI_S_ACCEPTED;
         update studySite;
 
-        hcpEnrollment = new HCP_Enrollment__c(
+        HCP_Enrollment__c hcpEnrollment = new HCP_Enrollment__c(
                 Study_Site__c = studySite.Id,
                 HCP_Contact__c = hcpContact.Id,
                 Status__c = HCPEnrollmentService.HCP_S_INVITATION_SENT
@@ -175,32 +145,21 @@ private class Test_BaseCRCPCommunity {
         hcpEnrollment.Status__c = HCPEnrollmentService.HCP_S_ACTIVATED;
         update hcpEnrollment;
 
-        siteStaff = new Site_Staff__c(
+        Site_Staff__c  siteStaff = new Site_Staff__c(
                 Site_Contact__c = piDelegateContact.Id,
                 Delegate_Level__c = DelegateService.DELEGATE_LEVEL_1,
                 Study_Site__c = studySite.Id
         );
         insert siteStaff;
 
-        referringHcpStaff = new Referring_HCP_Staff__c(
+        Referring_HCP_Staff__c   referringHcpStaff = new Referring_HCP_Staff__c(
                 Contact__c = hcpDelegateContact.Id,
                 Delegate_Level__c = DelegateService.DELEGATE_LEVEL_1,
                 HCP_Enrollment__c = hcpEnrollment.Id
         );
         insert referringHcpStaff;
 
-        mrrPE = new Participant_Enrollment__c(
-                HCP__c = hcpEnrollment.Id,
-                Pre_screening_Status__c = ParticipantEnrollmentService.PES_STATUS_NOT_REQUIRED,
-                Medical_Record_Review_Status__c = ParticipantEnrollmentService.MRR_STATUS_PENDING,
-                PI_Contact__c = piContact.Id,
-                Study_Site__c = studySite.Id,
-                Patient_ID__c = 'SomePatienntId',
-                Referral_Source__c = 'HCP'
-        );
-        insert mrrPE;
-
-        participant = new Participant__c(
+        Participant__c   participant = new Participant__c(
                 First_Name__c = 'Part1',
                 Last_Name__c = 'Part1',
                 Phone__c = '55313535',
@@ -209,8 +168,20 @@ private class Test_BaseCRCPCommunity {
                 Mailing_State_Code__c = 'AL'
         );
         insert participant;
-        participant = [SELECT Id, Name FROM Participant__c WHERE Id =: participant.Id];
-        passedMrrPE = new Participant_Enrollment__c(
+
+        List<Participant_Enrollment__c> participantEnrollments = new List<Participant_Enrollment__c>();
+        Participant_Enrollment__c   mrrPE = new Participant_Enrollment__c(
+                HCP__c = hcpEnrollment.Id,
+                Pre_screening_Status__c = ParticipantEnrollmentService.PES_STATUS_NOT_REQUIRED,
+                Medical_Record_Review_Status__c = ParticipantEnrollmentService.MRR_STATUS_PENDING,
+                PI_Contact__c = piContact.Id,
+                Study_Site__c = studySite.Id,
+                Patient_ID__c = 'SomePatienntId',
+                Referral_Source__c = 'HCP'
+        );
+        participantEnrollments.add(mrrPE);
+
+        Participant_Enrollment__c   passedMrrPE = new Participant_Enrollment__c(
                 HCP__c = hcpEnrollment.Id,
                 Pre_screening_Status__c = ParticipantEnrollmentService.PES_STATUS_NOT_REQUIRED,
                 Medical_Record_Review_Status__c = ParticipantEnrollmentService.MRR_STATUS_PASS,
@@ -221,31 +192,26 @@ private class Test_BaseCRCPCommunity {
                 Participant_Status__c = ParticipantEnrollmentService.PART_STATUS_REFERRAL_SENT_TO_PI,
                 Participant__c = participant.Id
         );
-        insert passedMrrPE;
+        participantEnrollments.add(passedMrrPE);
+        insert participantEnrollments;
 
-        referralNetwork = new Referral_Network__c(
+        Referral_Network__c   referralNetwork = new Referral_Network__c(
                 Name = 'Test Referral Network'
         );
         insert referralNetwork;
 
-        contactReferralNetwork = new Contact_Referral_Network__c(
+        Contact_Referral_Network__c   contactReferralNetwork = new Contact_Referral_Network__c(
                 ContactId__c = hcpContact.Id,
                 ReferralNetworkId__c = referralNetwork.Id
         );
         insert contactReferralNetwork;
 
-        contactTherapeuticArea = new Contact_Therapeutic_Area__c(
+        Contact_Therapeutic_Area__c   contactTherapeuticArea = new Contact_Therapeutic_Area__c(
                 ContactId__c = hcpContact.Id,
                 TherapeuticAreaId__c = area.Id
         );
         insert contactTherapeuticArea;
-
-    }
-
-    static void initUsers() {
-        participantUser = [SELECT Id FROM User WHERE Contact.LastName = :participant.Name];
-        hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
-        piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
 
         Terms_And_Conditions_Acceptance__c tc_acceptance = new Terms_And_Conditions_Acceptance__c(
                 User__c = hcpUser.Id,
@@ -256,15 +222,11 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void testReferralNetworkService_AutoEmails() {
-        ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
-               .when('createPortalUsers')
-               .then(null)
-               .when('createParticipantUsers')
-               .then(null)
-                .build()
-       );
-        init();
+        Terms_And_Conditions__c studyTC = [SELECT Id FROM Terms_And_Conditions__c WHERE Active__c != TRUE];
+        Therapeutic_Area__c area = [SELECT Id FROM Therapeutic_Area__c WHERE Name = 'Test TA'];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        Account studySiteAccount = [SELECT Id FROM Account WHERE Name = 'Study Site Account'];
+        Referral_Network__c referralNetwork = [SELECT Id FROM Referral_Network__c WHERE Name = 'Test Referral Network'];
         Clinical_Trial_Profile__c testStudy = new Clinical_Trial_Profile__c(
                 Protocol_ID__c = 'tt123456790',
                 Override_Recruitment_Status__c = 'Actively Enrolling',
@@ -293,8 +255,8 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void testReferralNetworkService_Subscription() {
-        init();
-        initUsers();
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         System.runAs(hcpUser) {
             List<SubscribeToReferralNetworkRemote.ReferralNetworkWrapper> recordsRN = SubscribeToReferralNetworkRemote.getReferralNetworkRecords('Referral_Network__c');
@@ -324,8 +286,8 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void baseHCPAdvancedTest() {
-        init();
-        initUsers();
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         System.runAs(hcpUser) {
             String stringData = StudyListViewController.getHCPInitData();
@@ -387,8 +349,12 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void baseHCPTest() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        HCP_Enrollment__c hcpEnrollment = [SELECT Id FROM HCP_Enrollment__c WHERE Study_Site__c = :studySite.Id];
+        Terms_And_Conditions__c studyTC = [SELECT Id FROM Terms_And_Conditions__c WHERE Active__c != TRUE];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         System.runAs(hcpUser) {
             StudyListViewController.getStudyTrialList(CommunityService.USER_MODE_HCP);
@@ -413,8 +379,11 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void baseHCPTest2() {
-        init();
-        initUsers();
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        HCP_Enrollment__c hcpEnrollment = [SELECT Id FROM HCP_Enrollment__c WHERE Study_Site__c = :studySite.Id];
+        Terms_And_Conditions__c studyTC = [SELECT Id FROM Terms_And_Conditions__c WHERE Active__c != TRUE];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         studySite.Override_PI_Referral_Status__c = StudySiteService.PI_S_ACCEPTED;
         update studySite;
@@ -430,8 +399,11 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void baseHCPTest3() {
-        init();
-        initUsers();
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        HCP_Enrollment__c hcpEnrollment = [SELECT Id FROM HCP_Enrollment__c WHERE Study_Site__c = :studySite.Id];
+        Terms_And_Conditions__c studyTC = [SELECT Id FROM Terms_And_Conditions__c WHERE Active__c != TRUE];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         studySite.Override_PI_Referral_Status__c = StudySiteService.PI_S_ACCEPTED;
         update studySite;
@@ -447,8 +419,10 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void baseHCPTest4() {
-        init();
-        initUsers();
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        HCP_Enrollment__c hcpEnrollment = [SELECT Id FROM HCP_Enrollment__c WHERE Study_Site__c = :studySite.Id];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         System.runAs(hcpUser) {
             ApplicationHelpRemote.getInitData(CommunityService.USER_MODE_HCP);
@@ -462,8 +436,10 @@ private class Test_BaseCRCPCommunity {
     }
     @IsTest
     static void baseHCPTest5() {
-        init();
-        initUsers();
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        HCP_Enrollment__c hcpEnrollment = [SELECT Id FROM HCP_Enrollment__c WHERE Study_Site__c = :studySite.Id];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         System.runAs(hcpUser) {
             Action_RequestToReferByHCPRemote.requestToReferForHCP(studySite.Id,hcpEnrollment.Id);
@@ -473,14 +449,10 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void emailTemplateController() {
-        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
-               .when('createPortalUsers')
-               .then(null)
-               .when('createParticipantUsers')
-               .then(null)
-               .build()
-       );
-        init();
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        HCP_Enrollment__c hcpEnrollment = [SELECT Id FROM HCP_Enrollment__c WHERE Study_Site__c = :studySite.Id];
+        Contact piDelegateContact = [SELECT Id FROM Contact WHERE Email = 'pi_delegate@emil.com'];
+        Participant_Enrollment__c   passedMrrPE = [SELECT Id FROM Participant_Enrollment__c WHERE Patient_ID__c = 'SomePatienntId2'];
         Test.startTest();
         EmailTemplateController controller = new EmailTemplateController();
         controller.sourceRecordId = piDelegateContact.Id;
@@ -514,8 +486,8 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void slideTour() {
-        init();
-        initUsers();
+        Contact piContact = [SELECT Id FROM Contact WHERE Email = 'pi@emil.com'];
+        User piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
         Test.startTest();
         System.runAs(piUser) {
             /*String initDataStr = OnboardingSlideTourRemote.getInitData();
@@ -532,14 +504,6 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void miscTests() {
-        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
-               .when('createPortalUsers')
-               .then(null)
-               .when('createParticipantUsers')
-               .then(null)
-               .build()
-       );
-        init();
         CountryStateUtil.getStateCodeByNameMap('US');
         TranslateHelper.convertBrowserLanguage(new List<String>{
                 'en-US', 'it'
@@ -550,14 +514,16 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void exportImportRemote() {
-        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
-               .when('createPortalUsers')
-               .then(null)
-               .when('createParticipantUsers')
-               .then(null)
-               .build()
-       );
-        init();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        String languageLocale;
+        Schema.DescribeFieldResult fieldResult = Translation__c.Language__c.getDescribe();
+        List<Schema.PicklistEntry> ple = fieldResult.getPicklistValues();
+        for( Schema.PicklistEntry pickListVal : ple){
+            if(pickListVal.getValue()!='en_US'){
+                languageLocale =pickListVal.getValue();
+                break;
+            }
+        }
         Test.startTest();
         String exportXML = TranslationExportImportRemote.export(study.Id, languageLocale, TranslationExportImportRemote.EXPORT_TYPE_BILINGUAL);
         TranslationExportImportRemote.importTranslation(EncodingUtil.base64Encode(Blob.valueOf(exportXML)));
@@ -566,14 +532,6 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void batchUpdateRecordsTest() {
-        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
-               .when('createPortalUsers')
-               .then(null)
-               .when('createParticipantUsers')
-               .then(null)
-               .build()
-       );
-        init();
         Test.startTest();
         Batch_UpdateRecords.run();
         Test.stopTest();
@@ -581,8 +539,9 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void myStudySiteDetail() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         System.runAs(hcpUser) {
             MyStudySitesController.getStudySiteDetail(study.Id);
@@ -592,10 +551,9 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void hcpDelegateTest() {
-        init();
-        initUsers();
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
-
         System.runAs(hcpUser) {
             MyTeamRemote.getInitData(CommunityService.USER_MODE_HCP);
             MyTeamRemote.MyTeamDetail detail = (MyTeamRemote.MyTeamDetail) JSON.deserialize(MyTeamRemote.getContactData(CommunityService.USER_MODE_HCP, 'hcp_delegate@emil.com'), MyTeamRemote.MyTeamDetail.class);
@@ -614,10 +572,9 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void piDelegateTest() {
-        init();
-        initUsers();
+        Contact piContact = [SELECT Id FROM Contact WHERE Email = 'pi@emil.com'];
+        User piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
         Test.startTest();
-
         System.runAs(piUser) {
             MyTeamRemote.getInitData(CommunityService.USER_MODE_PI);
             MyTeamRemote.MyTeamDetail detail = (MyTeamRemote.MyTeamDetail) JSON.deserialize(MyTeamRemote.getContactData(CommunityService.USER_MODE_PI, 'pi_delegate@emil.com'), MyTeamRemote.MyTeamDetail.class);
@@ -636,8 +593,10 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void basePITest1() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Contact piContact = [SELECT Id FROM Contact WHERE Email = 'pi@emil.com'];
+        User piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
+        Account hcpAccount = [SELECT Id FROM Account WHERE Name = 'HCP Account'];
         Test.startTest();
         System.runAs(piUser) {
             StudyListViewController.getStudyTrialList(CommunityService.USER_MODE_PI);
@@ -656,8 +615,12 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void basePITest2() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        Account studySiteAccount = [SELECT Id FROM Account WHERE Name = 'Study Site Account'];
+        Contact piContact = [SELECT Id FROM Contact WHERE Email = 'pi@emil.com'];
+        User piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
+        Participant__c   participant = [SELECT Id FROM Participant__c WHERE Email__c = 'part1@email.com'];
         Test.startTest();
         System.runAs(piUser) {
             String vpResultJSON = ViewPatientsRemote.getInitData(study.Id, studySite.Id, CommunityService.USER_MODE_PI, null, CommunityService.USER_MODE_PI);
@@ -673,8 +636,12 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void basePITest3() {
-        init();
-        initUsers();
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        HCP_Enrollment__c hcpEnrollment = [SELECT Id FROM HCP_Enrollment__c WHERE Study_Site__c = :studySite.Id];
+        Terms_And_Conditions__c studyTC = [SELECT Id FROM Terms_And_Conditions__c WHERE Active__c != TRUE];
+        Participant_Enrollment__c   passedMrrPE = [SELECT Id FROM Participant_Enrollment__c WHERE Patient_ID__c = 'SomePatienntId2'];
+        Contact piContact = [SELECT Id FROM Contact WHERE Email = 'pi@emil.com'];
+        User piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
         Test.startTest();
         System.runAs(piUser) {
             TermsAndConditionsRemote.acceptTC(studyTC.Id);
@@ -688,8 +655,10 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void accountSettingsControllerTest() {
-        init();
-        initUsers();
+        Contact piContact = [SELECT Id FROM Contact WHERE Email = 'pi@emil.com'];
+        User piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
+        Participant__c   participant = [SELECT Id, Name FROM Participant__c WHERE Email__c = 'part1@email.com'];
+        User participantUser = [SELECT Id FROM User WHERE Contact.Name = :participant.Name];
         Test.startTest();
         System.runAs(piUser) {
             AccountSettingsController.getInitData(CommunityService.USER_MODE_PI);
@@ -707,8 +676,11 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void myReferringClinics() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        HCP_Enrollment__c hcpEnrollment = [SELECT Id FROM HCP_Enrollment__c WHERE Study_Site__c = :studySite.Id];
+        Contact piContact = [SELECT Id FROM Contact WHERE Email = 'pi@emil.com'];
+        User piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
         Test.startTest();
         System.runAs(piUser) {
             MyReferredZoneController.getStatusOptions(CommunityService.USER_MODE_PI);
@@ -721,8 +693,10 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void referralProfileTest() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Participant_Enrollment__c   passedMrrPE = [SELECT Id FROM Participant_Enrollment__c WHERE Patient_ID__c = 'SomePatienntId2'];
+        Contact piContact = [SELECT Id FROM Contact WHERE Email = 'pi@emil.com'];
+        User piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
         Test.startTest();
         System.runAs(piUser) {
             ReferralProfileRemote.getReferralProfileDetail(passedMrrPE.Id, CommunityService.USER_MODE_PI);
@@ -740,8 +714,11 @@ private class Test_BaseCRCPCommunity {
     
     @IsTest
     static void mrrTest() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        HCP_Enrollment__c hcpEnrollment = [SELECT Id FROM HCP_Enrollment__c WHERE Study_Site__c = :studySite.Id];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         System.runAs(hcpUser) {
             String jsonResult = MedicalRecordReviewRemote.getInitData(study.Id, hcpEnrollment.Id);
@@ -751,8 +728,11 @@ private class Test_BaseCRCPCommunity {
     
     @IsTest
     static void mrrAndReferringTest1() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        HCP_Enrollment__c hcpEnrollment = [SELECT Id FROM HCP_Enrollment__c WHERE Study_Site__c = :studySite.Id];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         System.runAs(hcpUser) {
             //MedicalRecordReviewRemote.getHCPEnrolment(study.Id);
@@ -763,6 +743,7 @@ private class Test_BaseCRCPCommunity {
             Participant_Enrollment__c pe = [SELECT Id FROM Participant_Enrollment__c LIMIT 1];
             String refInitDataJSON = ReferringRemote.getInitData(study.Id, pe.Id, hcpEnrollment.Id, CommunityService.USER_MODE_HCP);
             ReferringRemote.InitData refInitData = (ReferringRemote.InitData) JSON.deserialize(refInitDataJSON, ReferringRemote.InitData.class);
+            insert new Participant__c();
             Participant__c participant2 = new Participant__c(
                     First_Name__c = 'FN',
                     Last_Name__c = 'LN',
@@ -779,8 +760,11 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void mrrAndReferringTest2() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
+        Participant__c   participant = [SELECT Id FROM Participant__c WHERE Email__c = 'part1@email.com'];
+        Participant_Enrollment__c   mrrPE = [SELECT Id FROM Participant_Enrollment__c WHERE Patient_ID__c = 'SomePatienntId'];
         Test.startTest();
         System.runAs(hcpUser) {
             //MedicalRecordReviewRemote.getHCPEnrolment(study.Id);
@@ -801,8 +785,10 @@ private class Test_BaseCRCPCommunity {
     
     @IsTest
     static void excelReportTest() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         System.runAs(hcpUser) {
             ApexPages.currentPage().getParameters().put('userMode', CommunityService.USER_MODE_PI);
@@ -823,8 +809,10 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void integrationStudyHubTest() {
-        init();
-        initUsers();
+        Study_Site__c studySite = [SELECT Id, Study_Site_Type__c FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
+        Participant_Enrollment__c   passedMrrPE = [SELECT Id FROM Participant_Enrollment__c WHERE Patient_ID__c = 'SomePatienntId2'];
         studySite.Study_Site_Type__c = 'Virtual';
         update studySite;
         Test.setMock(HttpCalloutMock.class, new IntegrationCalloutMock());
@@ -837,8 +825,10 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void integrationServiceNowTest() {
-        init();
-        initUsers();
+        Study_Site__c studySite = [SELECT Id, Study_Site_Type__c FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
+        Participant_Enrollment__c   passedMrrPE = [SELECT Id FROM Participant_Enrollment__c WHERE Patient_ID__c = 'SomePatienntId2'];
         studySite.Study_Site_Type__c = 'Virtual';
         update studySite;
         Test.setMock(HttpCalloutMock.class, new IntegrationCalloutMock());
@@ -850,8 +840,9 @@ private class Test_BaseCRCPCommunity {
     }
     @IsTest
     static void sitesSearchTest() {
-        init();
-        initUsers();
+        Clinical_Trial_Profile__c study = [SELECT Id FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
+        Contact hcpContact = [SELECT Id FROM Contact WHERE Email = 'hcp@emil.com'];
+        User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
         Test.startTest();
         System.runAs(hcpUser) {
             //MedicalRecordReviewRemote.getHCPEnrolment(study.Id);
@@ -865,8 +856,9 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void testSaveNewAddress() {
-        init();
-        initUsers();
+        Study_Site__c studySite = [SELECT Id FROM Study_Site__c WHERE Study_Site_Type__c = 'Traditional'];
+        Contact piContact = [SELECT Id FROM Contact WHERE Email = 'pi@emil.com'];
+        User piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
         Test.startTest();
         Account testAccount = new Account(Name = 'Test Name', BillingStreet = 'BillingStreet');
         insert testAccount;
@@ -900,16 +892,16 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void testSaveSSDetails() {
-        init();
-        initUsers();
+        Contact piContact = [SELECT Id FROM Contact WHERE Email = 'pi@emil.com'];
+        Study_Site__c studySite = [SELECT Id, Site_Staff__c, Study_Site_Email__c, Study_Site_Phone__c, Site__c FROM Study_Site__c WHERE Principal_Investigator__c = :piContact.Id];
+        User piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
         Test.startTest();
-        studySite = [SELECT Id, Site_Staff__c, Study_Site_Email__c, Study_Site_Phone__c, Site__c FROM Study_Site__c WHERE Id = :studySite.Id];
         System.runAs(piUser) {
             studySite.Study_Site_Phone__c = '123456789';
             String status = StudyListViewController.saveSSChanges(JSON.serialize(studySite));
         }
-            Study_Site__c updatedSS = [SELECT Id, Site_Staff__c, Study_Site_Email__c, Study_Site_Phone__c, Site__c FROM Study_Site__c WHERE Id = :studySite.Id];
-            System.assertEquals(studySite.Study_Site_Phone__c, updatedSS.Study_Site_Phone__c);
+        Study_Site__c updatedSS = [SELECT Id, Site_Staff__c, Study_Site_Email__c, Study_Site_Phone__c, Site__c FROM Study_Site__c WHERE Id = :studySite.Id];
+        System.assertEquals(studySite.Study_Site_Phone__c, updatedSS.Study_Site_Phone__c);
         Test.stopTest();
     }
 
